# testing-rust

./: Cargo.toml  README.md
benches/: factorial_benchmark.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_factorial_interface.rs
src/: lib.rs  main.rs
tests/: cli_test.rs  lib_tests.rs
